# E-commerce-app-for-college

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  config.py  main.py  models.py  pyproject.toml  requirements.txt  test.py  utils.py
backend/routes/: Bids.py  Items.py  Login.py  Ratings.py  Transactions.py
frontend-app/: App.js  app.json  package-lock.json  package.json
frontend-app/src/context/: AuthContext.js
frontend-app/src/navigation/: AppNav.js  AppStack.js  AuthStack.js
frontend-app/src/screens/Auth/: LoginScreen.js  RegisterScreen.js
frontend-app/src/screens/Main/: HomeScreen.js
frontend-app/src/services/: api.js
frontend-web/: TODO.txt  index.html  package-lock.json  package.json
frontend-web/src/: App.jsx  index.css
frontend-web/src/components/button/: Button.module.css  Button2D.jsx  Button3D.jsx  ButtonNB.jsx  ButtonNB.module.css
frontend-web/src/components/card/: Card.module.css  Card2D.jsx  Card3D.jsx
frontend-web/src/components/checkBox/: CheckBox.jsx  CheckBox.module.css
frontend-web/src/components/loader/: Loader.jsx  Loader.module.css
frontend-web/src/components/progressBar/: ProgressBar.jsx  ProgressBar.module.css
frontend-web/src/components/switch/: Switch.jsx  Switch.module.css
frontend-web/src/components/toolTip/: ToolTip.jsx  ToolTip.module.css  ToolTipContainer.jsx
frontend-web/src/pages/login/: Login.jsx
