[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2,argon8]>=0.3.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.46",
]
